<resources>
    <string name="app_name">Jobs</string>
    <string name="facebook_app_id">444668609424861</string>
    <string name="com_twitter_sdk_android_CONSUMER_KEY">AxfkA6UX4oH9nZ7WXW2agq1ZQ</string>
    <string name="com_twitter_sdk_android_CONSUMER_SECRET">78H1VIx7qBZh2wIWmJJb8qbFbjE8ivdgKAlf68UTDJCeTVPch6</string>
    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="ok">OK</string>
    <string name="permission_title_alert">Alert Permission</string>
    <string name="permission_content_alert">You should to get the permissions you need for the app to use it.</string>
    <string name="get_started">GET STARTED</string>
    <string name="already_have_account">Already have an account? LOG IN  </string>
    <string name="username">USERNAME</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="re_password">Re-Password</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="low_password">Password</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="login">LOGIN</string>
    <string name="login_">Log In</string>
    <string name="signup_">Sign Up</string>
    <string name="skip">Skip</string>
    <string name="slide_title1">Post your service request</string>
    <string name="slide_title2">Select the type of service</string>
    <string name="slide_title3">Enter your request details and choose your availability</string>
    <string name="slide_title4">Receive proposals from top rated certified specialists</string>
    <string name="create_accont">CREATE ACCOUNT</string>
    <string name="signup">SIGN UP</string>
    <string name="tools_and_box">Tools and Box</string>
    <string name="home">Home</string>
    <string name="contractors">Contractors</string>
    <string name="marketplace">Marketplace</string>
    <string name="info">Info</string>
    <string name="news">News</string>
    <string name="messages">Messages </string>
    <string name="profile">Profile</string>
    <string name="post_job">Post a Job</string>
    <string name="post_job_request">Post a Job Request</string>
    <string name="add_date">Add Date</string>
    <string name="upload">Upload</string>
    <string name="edit_a_job">Edit a Job</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_phone_number">Edit Phone Number</string>
    <string name="verification_required">Verification Required</string>
    <string name="explore_market_place">Explore Marketplace</string>
    <string name="edit_name">Edit name</string>
    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="personal_information">Personal Information</string>
    <string name="payment">Payment</string>
    <string name="cancel_job">Cancel Job</string>
    <string name="phone">Phone</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_verification">Phone Verification</string>
    <string name="email_verification">Email Verification</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="rating">Rating</string>
    <string name="rating_dot">Rating:</string>
    <string name="region">Region</string>
    <string name="project_done_on_time">Jobs done on time</string>
    <string name="search">Search</string>
    <string name="about_Jobs">About Jobs</string>
    <string name="about">About</string>
    <string name="about_dot">About:</string>
    <string name="share_on_social_media">Share on Social Media</string>
    <string name="call_customer_support">Call Customer Support</string>
    <string name="email_customer_support">Email Customer Support</string>
    <string name="privacy_policy">Privacy Policy.</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="contractor_name">Contractor Name</string>
    <string name="title_of_specialist">Title of Specialist</string>
    <string name="specialization">Specialization</string>
    <string name="number_of_project">Number of Job</string>
    <string name="overall_rating">Overall Rating</string>
    <string name="time_commitment">Time Commitment</string>
    <string name="time_availability">Time availability</string>
    <string name="reviews">Reviews</string>
    <string name="project_history">Job History</string>
    <string name="what_type_of_project">What type of Job</string>
    <string name="budget">Budget</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="status">Status</string>
    <string name="specialist_total_hours">Specialist Total Hours</string>
    <string name="hourly_rate">Hourly Rate</string>
    <string name="hourly_rate_dot">Hourly Rate:</string>
    <string name="contractor">Contractor</string>
    <string name="contractor_title">Contractor Title</string>
    <string name="contractor_specialization">Contractor Specialization</string>
    <string name="start_date">Start Date</string>
    <string name="start_Date_time">Start Date &amp; Time </string>
    <string name="duration">Duration</string>
    <string name="project_description">Job Description</string>
    <string name="cost">Cost</string>
    <string name="more">More</string>
    <string name="expand">expand</string>
    <string name="search_description">Search for specialists in any industry in your area</string>
    <string name="area_of_specialization">Area of Specialization</string>
    <string name="search_result">Search Results</string>
    <string name="hire">Hire</string>
    <string name="chat">Chat</string>
    <string name="filter">Filter</string>
    <string name="post_project_description">Search your Job history, post new Job and filter jobs</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_mobile_description">Please enter your phone number.\nYou will receive a verification code via SMS to create a new password</string>
    <string name="forgot_email_description">Please enter your email address.\nYou will receive a verification code via email to create a new password</string>
    <string name="make_payment">Make Payment</string>
    <string name="edit">Edit</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="select_verification_method">Select Verification Method</string>
    <string name="account_verification">Account Verification</string>
    <string name="enter_password">Enter Password</string>
    <string name="verify_via_mobile">Verify via mobile</string>
    <string name="verify_via_email">Verify via email</string>
    <string name="open">Open</string>
    <string name="project_name">Job Name</string>
    <string name="project_type">Job Type</string>
    <string name="skills_required">Skills Required</string>
    <string name="estimated_budget">Estimated Budget</string>
    <string name="contact_info">Contact Info</string>
    <string name="account_settings">Account settings</string>
    <string name="payment_info">Payment Info</string>
    <string name="about_us">About Us</string>
    <string name="sharing">Sharing</string>
    <string name="customer_support">Customer support</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="filter_result">Filter Result</string>
    <string name="jobs">Jobs</string>
    <string name="sign_up_with_email_">Sign up with your email or phone number</string>
    <string name="connecting_you_with">Connecting you with your service specialist</string>
    <string name="copyright_jobs">Copyright \u00a9 2020 Jobs Technologies lnc.</string>
    <string name="or_sign_in_with">Or Sign in with</string>
    <string name="i_agree_to_the_terms">I agree to the <b>Terms of Service</b> and <b>Privacy Policy</b></string>
    <string name="industry">Industry</string>
    <string name="industry_dot">Industry:</string>
    <string name="area">Area</string>
    <string name="search_radius">Search Radius:</string>
    <string name="pending">Pending Proposals</string>
    <string name="scheduled">Scheduled</string>
    <string name="complete">Complete</string>
    <string name="value">Value</string>
    <string name="job_value">Job Value</string>
    <string name="posted_date">Posted Date</string>
    <string name="logout">Logout</string>
    <string name="note">Note</string>
    <string name="please_signup_to_post_job">Please sign up or login to post a job</string>
    <string name="please_signup_to_view_job">Please sign up or login to view your jobs</string>
    <string name="please_signup_to_chat">Please sign up or login to chat with your specialist</string>
    <string name="please_signup_to_view_profile">Please sign up or login to view your profile</string>
    <string name="you_must_add_your_name">You must add your name before posting a job!</string>
    <string name="save">Save</string>
    <string name="verify_me">Verify Me</string>
    <string name="enter_your_phone_number">Enter your phone number to receive a verification code</string>
    <string name="you_should_be_receving_sms">You should be receiving a verification code via SMS shortly</string>
    <string name="you_should_be_receving_email">You should be receiving a verification code via email shortly</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="loading_jobs">Loading Jobs</string>
    <string name="loading_proposals">Loading Proposals</string>
    <string name="loading_reviews">Loading Reviews</string>
    <string name="no_review_yet">No Review yet</string>
    <string name="loading_specialists">Loading Specialists</string>
    <string name="add_photo">Add Photo</string>
    <string name="name">Name</string>
    <string name="what_are_you_looking">What are you looking to do today?</string>
    <string name="availability">Availability</string>
    <string name="view_availability">View Availability</string>
    <string name="urgency">Urgency</string>
    <string name="job_post_description">Description: Please include details related to your job request. This will help your specialist determine the best and most accurate proposal for the job.</string>
    <string name="specialist">Specialist</string>
    <string name="specialists">Specialists</string>
    <string name="name_of_completed_job">Number of Completed Jobs</string>
    <string name="see_reviews">See Reviews</string>
    <string name="scheduled_date">Scheduled Date</string>
    <string name="add_review">Add Review</string>
    <string name="work_quality">Work Quality</string>
    <string name="please_add_comment">Please add your review</string>
    <string name="post_date">Post Date</string>
    <string name="duration_days">Duration (days)</string>
    <string name="job_description">Job Description</string>
    <string name="view_proposal">View Proposals</string>
    <string name="proposal">Proposal</string>
    <string name="payments">Payments</string>
    <string name="add_card">Add Card</string>
    <string name="add_payment">Add Payment</string>
    <string name="edit_job">Edit Job</string>
    <string name="complete_job">Complete Job</string>
    <string name="remove_posting">Remove Posting</string>
    <string name="dispute_job">Dispute Job</string>
    <string name="dispute_form">Dispute Form</string>
    <string name="dispute_form_details">Please explain your dispute case in details. Please include the reason for the dispute, as well as other necessary details.</string>
    <string name="payment_hold">Your specialist will not receive the payment until the job is complete, and you will not be charged until the job is complete</string>
    <string name="continue_">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
</resources>