<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="7dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="7dp">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/hold"/>

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/payment_hold"
        android:textSize="@dimen/text_title"
        android:textColor="@color/colorBlack"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/cancel"
            android:layout_gravity="center"
            android:textColor="@color/colorBlue"/>

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/continue_"
            android:layout_gravity="center"
            android:textColor="@color/colorBlue"/>

    </LinearLayout>



</LinearLayout>
