<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    tools:context=".view.activity.login.EnterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_logo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/jobs"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/text_medium"
                    android:textColor="@color/colorWhite"
                    android:text="@string/connecting_you_with"/>
            </LinearLayout>




        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cv_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_above="@+id/btn_login"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardBackgroundColor="@android:color/transparent"
                card_view:cardElevation="0dp"
                app:cardCornerRadius="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/corner_button"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:paddingRight="3dp"
                        android:text="@string/login"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/button_font_normal" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cv_signup"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_above="@+id/btn_login"
                android:clickable="true"
                android:layout_marginTop="16dp"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardBackgroundColor="@android:color/transparent"
                card_view:cardElevation="0dp"
                app:cardCornerRadius="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/corner_button"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:paddingRight="3dp"
                        android:text="@string/signup"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/button_font_normal" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="32dp"
                android:textSize="@dimen/text_small"
                android:text="@string/privacy_policy"
                android:textColor="@color/colorWhite"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/text_small"
                android:layout_marginTop="7dp"
                android:text="@string/terms_of_use"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/text_small"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/copyright_jobs"
                android:textColor="@color/colorWhite"/>



        </LinearLayout>

    </LinearLayout>



</LinearLayout>