<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBlue"
    tools:context=".view.activity.login.forgot.ForgotOptionActivity">

    <include layout="@layout/toolbar_default_color"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_verification_method"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="32dp"/>


    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="52dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_mobile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify_via_mobile"
            android:buttonTint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_normal"/>

        <RadioButton
            android:id="@+id/rb_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:buttonTint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:text="@string/verify_via_email"
            android:textSize="@dimen/text_normal"/>

    </RadioGroup>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_normal"
        android:layout_below="@+id/btn_forgot_password"
        android:clickable="true"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="@dimen/activity_vertical_margin_normal"
        android:layout_marginRight="@dimen/activity_vertical_margin_normal"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardBackgroundColor="@android:color/transparent"
        card_view:cardElevation="0dp"
        app:cardCornerRadius="25dp"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/corner_button"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:paddingRight="3dp"
                android:text="@string/submit"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/button_font_normal" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>