<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.main.jobs.DisputeJobActivity">

    <include layout="@layout/toolbar_default" />

    <LinearLayout
        android:id="@+id/ll_dispute_form"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_row_height"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="@dimen/ic_size_small"
            android:layout_height="@dimen/ic_size_small"
            android:src="@drawable/tf_email"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:text="@string/dispute_form"
            android:textColor="@color/colorSpliteLine"
            android:textSize="@dimen/text_title" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_details"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tv_details_height"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:textSize="@dimen/text_title"
        android:textColor="@color/colorGray"
        android:inputType="textMultiLine"
        android:textCursorDrawable="@color/colorBlue"
        android:gravity="top"
        android:padding="5dp"
        android:background="@drawable/corner_field"
        android:hint="@string/dispute_form_details"/>


    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_normal"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="@dimen/activity_vertical_margin_normal"
        android:layout_marginLeft="@dimen/activity_vertical_margin_normal"
        android:layout_marginRight="@dimen/activity_vertical_margin_normal"
        android:textAllCaps="false"
        android:background="@drawable/bg_rounded_25"
        android:text="@string/submit"
        android:textSize="@dimen/text_title"/>


</LinearLayout>