<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_bg"
    tools:context=".view.activity.main.profile.PinCodeActivity">

    <include layout="@layout/toolbar_gradient"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:text="@string/enter_verification_code"/>


        <com.chaos.view.PinView
            android:id="@+id/pinView"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:cursorVisible="true"
            android:layout_gravity="center"
            android:inputType="numberPassword"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_title"
            android:textStyle="bold"
            app:cursorColor="@color/colorWhite"
            app:cursorWidth="2dp"
            app:hideLineWhenFilled="true"
            app:itemCount="4"
            app:itemRadius="30dp"
            app:itemHeight="60dp"
            app:itemSpacing="10dp"
            app:itemWidth="60dp"
            app:lineColor="@color/colorBlue"
            app:lineWidth="0dp"
            app:viewType="rectangle" />

        <TextView
            android:id="@+id/tv_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="32dp"
            android:textSize="@dimen/text_title"
            android:textColor="@color/colorGray"
            android:text="@string/you_should_be_receving_sms"/>


        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height_normal"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/activity_vertical_margin_normal"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/bg_rounded_25"
            android:text="@string/confirm"
            android:textSize="@dimen/text_title"/>

    </LinearLayout>




</LinearLayout>