<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_bg"
    tools:context=".view.activity.main.profile.EditProfileActivity">

    <include layout="@layout/toolbar_gradient" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="24dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    app:civ_border_width="1dp"
                    app:civ_border_color="@color/colorGray"
                    android:src="@drawable/ic_avatar" />

                <RelativeLayout
                    android:id="@+id/rl_edit_profile"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:clickable="true"
                    android:background="@drawable/bg_circle_blue"
                    android:layout_gravity="bottom|right">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_edit"
                        android:layout_centerInParent="true"/>

                </RelativeLayout>

            </FrameLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin">

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/name"
                    android:textSize="@dimen/text_normal"
                    android:textColor="@color/colorBlack"
                    android:layout_centerVertical="true"
                    android:background="@color/colorTransparent"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/colorSpliteLine"/>

            </RelativeLayout>


        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_normal"
                android:layout_centerVertical="true"
                android:background="@color/colorTransparent"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/colorSpliteLine"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="50dp"
                android:hint="@string/phone"
                android:textSize="@dimen/text_normal"
                android:textColor="@color/colorBlack"
                android:layout_centerVertical="true"
                android:background="@color/colorTransparent"/>

            <Button
                android:id="@+id/btn_edit_phone"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:textSize="@dimen/text_normal"
                android:textColor="@color/colorBlue"
                android:background="?android:attr/selectableItemBackground"
                android:textAllCaps="false"
                android:layout_alignParentRight="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/colorSpliteLine"/>

        </RelativeLayout>


        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height_normal"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/activity_vertical_margin_normal"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/bg_rounded_25"
            android:text="@string/save"
            android:textSize="@dimen/text_title"/>

    </LinearLayout>




</LinearLayout>